--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,27 @@
 .App-link {
   color: #09d3ac;
 }
+
+.result-item:hover {
+  text-decoration: none !important;
+  text-shadow: 1px 1px 2px rgba(0,0,0,.1);
+  color: #282c34 !important;
+  box-shadow: inset 0 0 10px -5px rgba(40,44,52,.5) !important;
+}
+
+.result-item {
+
+}
+
+/* Mobile */
+
+@media (max-width: 767px) {
+  .app-title {
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .search-container {
+    padding: 0 !important;
+  }
+}
