--- a/src/App.css
+++ b/src/App.css
@@ -45,15 +45,17 @@
   color: #09d3ac;
 }
 
+
+.result-item {
+    -webkit-transition: all .9s; /* Safari prior 6.1 */
+    transition: all .9s;
+}
+
 .result-item:hover {
   text-decoration: none !important;
   text-shadow: 1px 1px 2px rgba(0,0,0,.1);
   color: #282c34 !important;
   box-shadow: inset 0 0 10px -5px rgba(40,44,52,.5) !important;
-}
-
-.result-item {
-
 }
 
 /* Mobile */
