--- a/src/Item.css
+++ b/src/Item.css
@@ -20,11 +20,36 @@
     outline: none;
 }
 
+.oer-title {
+    margin: 25px 0;
+}
+
+.oer-details {
+    margin-bottom: 25px;
+}
+
+.oer-details {
+    padding: 0;
+}
+
+.oer-details li {
+    list-style: none;
+    display: inline-block;
+    color: #52565c;
+    margin-right: 10px;
+    /*text-shadow: 3px 3px 2px rgba(0,0,0,.1);*/
+    box-shadow: 4px 4px 5px -1px rgba(0,0,0,.1 );
+    border: thin solid rgb(82,86,92);
+    border-radius: 3px;
+    padding: 5px 9px;
+}
+
 .oer-description {
     text-align: justify;
 }
 
 .oer-image {
+    padding: 5px;
     border-radius: 5px;
     border: 1px solid rgba(0,0,0,.5);
     box-shadow: 5px 5px 5px -3px rgba(0,0,0,.2);
