--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,15 @@
-.App {
-  /*text-align: center;*/
+/* Base styles */
+.app-title a {
+    color: white;
 }
 
-/*.App-logo {
-  height: 40vmin;
-}*/
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-title a:hover {
+    color: white;
+    text-decoration: none;
+    text-shadow: 1px 1px 3px rgba(255,255,255,.2);
 }
 
+/* App page styles */
 .app-header {
   background-color: #282c34;
   font-size: calc(10px + 2vmin);
@@ -33,7 +26,6 @@
 }
 
 .results-section {
-  /*padding: 45px 0 !important;*/
   border-left: 1px solid rgba(40,44,52, .1);
 }
 
@@ -45,7 +37,6 @@
   color: #09d3ac;
 }
 
-
 .result-item {
     -webkit-transition: all .9s; /* Safari prior 6.1 */
     transition: all .9s;
@@ -56,6 +47,64 @@
   text-shadow: 1px 1px 2px rgba(0,0,0,.1);
   color: #282c34 !important;
   box-shadow: inset 0 0 10px -5px rgba(40,44,52,.5) !important;
+}
+
+/* Oer page styles */
+.app-header {
+    background-color: #282c34;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    padding: 10px;
+}
+
+.app-title h1 {
+    padding: 0 10px;
+}
+
+.search-bar {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Noto Sans","Ubuntu","Droid Sans","Helvetica Neue",sans-serif;
+    width: 100%;
+    height: 42px;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    background-color: #fafafa;
+    font-size: 0.9rem;
+    outline: none;
+}
+
+.oer-title {
+    margin: 25px 0;
+}
+
+.oer-details {
+    margin-bottom: 25px;
+}
+
+.oer-details {
+    padding: 0;
+}
+
+.oer-details li {
+    list-style: none;
+    display: inline-block;
+    color: #52565c;
+    margin-right: 10px;
+    /*text-shadow: 3px 3px 2px rgba(0,0,0,.1);*/
+    box-shadow: 4px 4px 5px -1px rgba(0,0,0,.1 );
+    border: thin solid rgb(82,86,92);
+    border-radius: 3px;
+    padding: 5px 9px;
+}
+
+.oer-description {
+    text-align: justify;
+}
+
+.oer-image {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid rgba(0,0,0,.5);
+    box-shadow: 5px 5px 5px -3px rgba(0,0,0,.2);
 }
 
 /* Mobile */
