--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,33 @@
     box-shadow: inset 0 0 10px -5px rgba(40, 44, 52, .8) !important;
 }
 
+#collapse-filters-button {
+    width: 100%;
+    text-align: left;
+    margin: 25px 15px 0 15px;
+    font-size: 1.5rem;
+    padding: 10px 0;
+    border-bottom: thin solid black;
+    border-radius: 0;
+    color: #282c34;
+    font-weight: lighter;
+}
+
+#collapse-filters-button:hover {
+    text-decoration: none;
+}
+
+#collapse-filters-button {
+    position:relative;
+}
+#collapse-filters-button i {
+    position:absolute;
+    line-height: 24px;
+    top:50%;
+    margin-top: -12px; /* Half of line height to keep left middle postion of container */
+    right: 10px;
+}
+
 /* Oer page styles */
 .app-header {
     background-color: #282c34;
